# hydra

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/hydra-api/: Cargo.toml
crates/hydra-api/src/: consts.rs  cpi.rs  error.rs  instruction.rs  lib.rs  state.rs
crates/hydra-api/src/program/: helpers.rs  mod.rs  processor.rs
crates/hydra-cranker/: Cargo.toml
crates/hydra-cranker/src/: cache.rs  fire.rs  grpc.rs  main.rs  metrics.rs  mode.rs  watch.rs
examples/anchor/: Anchor.toml  Cargo.toml
examples/anchor/programs/hydra-example-anchor/: Cargo.toml
examples/anchor/programs/hydra-example-anchor/src/: lib.rs
examples/anchor/programs/hydra-example-anchor/tests/: mollusk.rs
examples/native/: Cargo.toml
examples/native/src/: lib.rs
examples/native/tests/: mollusk.rs
examples/pinocchio/: Cargo.toml
examples/pinocchio/src/: lib.rs
examples/pinocchio/tests/: mollusk.rs
programs/hydra/: Cargo.toml
programs/hydra-ephemeral/: Cargo.toml
programs/hydra-ephemeral/src/: entrypoint.rs  lib.rs
programs/hydra-ephemeral/src/processor/: cancel.rs  close.rs  common.rs  create.rs  mod.rs  trigger.rs
programs/hydra/src/: entrypoint.rs  helpers.rs  lib.rs
programs/hydra/src/processor/: cancel.rs  close.rs  common.rs  create.rs  mod.rs  trigger.rs
programs/hydra/src/processor/base/: cancel.rs  close.rs  create.rs  mod.rs  trigger.rs
programs/hydra/src/processor/ephemeral/: cancel.rs  close.rs  common.rs  create.rs  mod.rs  trigger.rs
tests/: Cargo.toml  lib.rs
tests/benches/: compute_units.rs
tests/e2e/: Cargo.toml
tests/e2e/tests/: ephemeral_cranks.rs
tests/ephemeral/: Cargo.toml
tests/ephemeral/tests/: lifecycle.rs
tests/programs/noop/: Cargo.toml
tests/programs/noop/src/: lib.rs
