[workspace]
resolver = "2"
default-members = ["programs/hydra"]
members = [
    "programs/hydra",
    "programs/hydra-ephemeral",
    "crates/hydra-api",
    "crates/hydra-cranker",
    "tests",
    "tests/e2e",
    "tests/programs/noop",
    "examples/native",
    "examples/pinocchio",
]
# `examples/anchor` is its own Anchor workspace (Anchor.toml + programs/*)
# so `anchor build` works when run from inside it. Excluded here so Cargo
# doesn't try to merge the two workspaces.
exclude = ["examples/anchor"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/magicblock-labs/hydra"

[workspace.dependencies]
pinocchio = { version = "0.10", features = ["cpi"] }
pinocchio-system = "0.5"
pinocchio-log = "0.5"
# CPI helpers for MagicBlock ephemeral accounts (used by the ephemeral-crank
# instructions). Tracks pinocchio 0.10, which is why the program is pinned to
# 0.10 rather than 0.11.
ephemeral-rollups-pinocchio = "0.15"
solana-address = { version = "2", features = ["decode", "curve25519"] }
solana-define-syscall = "5.0"
hydra-api = { path = "crates/hydra-api" }

# tests only:
mollusk-svm = "=0.12.1-agave-4.0"
mollusk-svm-programs-memo = "=0.12.1-agave-4.0"
solana-svm-log-collector = { version = "4.0.0-beta", features = [
    "agave-unstable-api",
] }
solana-logger = "3"
solana-instruction = "3.0"
solana-pubkey = "4.0"
solana-account = "3.0"
solana-keypair = "3.1"
solana-message = "3.0.1"
solana-signer = "3.0"
solana-transaction = "3.0"
solana-hash = "3.1.0"
solana-system-interface = { version = "2.0", features = ["bincode"] }

[profile.release]
lto = "thin"
codegen-units = 1
overflow-checks = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
