[package]
name = "hydra-cranker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permissionless off-chain crank runner for Hydra"
publish = false

[[bin]]
name = "hydra-cranker"
path = "src/main.rs"

[dependencies]
hydra-api = { workspace = true, features = ["client"] }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5"
ctrlc = "3"
env_logger = "0.11"
log = "0.4"
prometheus = { version = "0.13", default-features = false }
tiny_http = "0.12"

solana-client = "=4.0.0-beta.7"
solana-pubsub-client = "=4.0.0-beta.7"
solana-rpc-client-api = "=4.0.0-beta.7"
solana-account-decoder-client-types = "=4.0.0-beta.7"

solana-pubkey = { workspace = true }
solana-commitment-config = "3.1"
solana-instruction = { workspace = true }
solana-keypair = "3.1"
solana-message = "3.1"
solana-signer = "3"
solana-transaction = "3.1"
solana-hash = "4"

# Optional Yellowstone gRPC streaming source (used in addition to WS subs).
tokio = { version = "1", features = ["rt", "macros", "time"] }
futures = "0.3"
yellowstone-grpc-client = "9"
yellowstone-grpc-proto = "9"
