[package]
name = "hydra-noop"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal pinocchio no-op program, used as a scheduled-ix target in Hydra's CU tests."
publish = false

[lib]
crate-type = ["cdylib"]

[features]
custom-panic = []
custom-heap = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { workspace = true }

[package.metadata.solana]
program-id = "4sdZFwGE7TkQCJVpfggvfy2ZwGNCfF6hAMJYjZU5HpZG"

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = ['cfg(target_os, values("solana"))']
